[package]
name = "tempus-cli"
version = "1.1.0"
edition = "2021"
authors = [
    "Jake Wilson"
]
description = "Easy time tracking"
repository = "https://git.sr.ht/~jakewilson/tempus"
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tempus"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "~2.27.0"
regex = "1"
